# movidius

./: .gitignore  Dockerfile  README.md  check_ncs_v5.py  check_usb_details.py  compile_pipeline.sh  docker-compose.yml  export_model.py  export_to_blob.py  install_udev_host.sh  install_udev_rules.sh  load_model.py  pyproject.toml  reset_usb.py
