[project]
name = "movidius"
version = "0.1.0"
description = "A simple PyTorch refresher repository"
requires-python = ">3.10, <3.11"


dependencies = [
    "openvino==2023.3.0",
    "pytest",
    "chalk-diagrams",
    "ipython",
    "jupyter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]

[tool.uv.sources]
chalk-diagrams = { git = "https://github.com/chalk-diagrams/chalk" }
# Optional configuration for uv
