[project]
name = "movidius"
version = "0.1.0"
description = "A simple repo for saving models onto the movidius compute stick"
requires-python = ">=3.12, <3.13"


dependencies = [
    "torch>=2.7.0",
    "onnx",
    "onnxscript",
    "onnx-simplifier",
    "openvino>=2024.0.0",
    "pytest",
    "chalk-diagrams",
    "ipython",
    "jupyter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]

[tool.uv.sources]
chalk-diagrams = { git = "https://github.com/chalk-diagrams/chalk" }
# Optional configuration for uv
